# Fidei - Take back your faith
# Copyright (C) 2022 Florian "sp1rit" <sp1rit@national.shitposting.agency>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

option('gettext', type : 'feature', description: 'Build with localization support')
option('libicu', type : 'feature', description: 'Localization of language strings')
option('sandboxed', type: 'boolean', value: false, description: 'Build with XDG-Portal support (UNIX only)')
option('xdp_openuri_location', type: 'string', value: '/usr/share/dbus-1/interfaces/org.freedesktop.portal.OpenURI.xml', description: 'Path to the org.freedesktop.portal.OpenURI.xml interface definition required to make use of portals. Only affects build when sandboxed is set to true')
